# PyPercy

./: .gitignore  NOTES
db/: db  db2
percy/: Makefile  cmake_install.cmake
proxy/: config.py  pir.py  req.py  requirements.txt  server.py
proxy/sample/: index.html
py/: .test.py.swp  pypercy.py  req.py  test.py
src/: CMakeLists.txt  ag.cc  ag.h  chor.h  chor_client.cc  chor_server.cc  client.cc  err.cc  itzzp.h  itzzp_client.cc  itzzp_server.cc  server.cc  zpercy.h
